--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,9 @@ Changelog
 - Require rl >= 1.16.
   [stefan]
 
+- Switch to Sphinx 1.1. based docs.
+  [stefan]
+
 
 1.0 - 2011-07-14
 ----------------
