--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+2.1.2 - Unreleased
+------------------
+
+- More documentation updates.
+  [stefan]
+
+
 2.1.1 - 2012-03-29
 ------------------
 
