--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 2.2 - Unreleased
 ----------------
 
+- More documentation updates.
+  [stefan]
+
 
 2.1.1 - 2012-03-29
 ------------------
